<resources>
    <string name="app_name">Library App</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="write_file">This app needs access to your file storage so that it can write files.</string>

    <string name="register">Register</string>
    <string name="surname">surname</string>
    <string name="othernames">othernames</string>
    <string name="username">username</string>
    <string name="contact">contact</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Closer Drawer</string>
    <string name="search">Search</string>
    <string name="book_image">book image</string>
</resources>
